--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,18 +2,28 @@
     "python.pythonPath": "/mnt/sda1/workenv_linux/python_3_6_megaparallax/bin/python3",
     "python.venvPath": "/mnt/sda1/workenv_linux/python_3_6_megaparallax/bin/python3",
     "python.terminal.activateEnvironment": true,
+    "python.envFile": "${workspaceFolder}/.env",
     "python.formatting.provider": "autopep8",
     "python.formatting.autopep8Args": ["--max-line-length=200"],
+    "python.autoComplete.addBrackets": true,
+    "python.autoComplete.extraPaths": [
+        "/mnt/sda1/workspace_windows/panoramic_optical_flow/code/python/",
+        "/mnt/sda1/workspace_windows/panoramic_optical_flow/code/python/test/"],
     "python.linting.enabled": true,
     "python.linting.pylintEnabled": true,
     "python.linting.pylintArgs": ["--list-msgs"],
     "python.linting.pylintPath": "/mnt/sda1/workenv_linux/python_3_6_megaparallax/bin/pylint",
     "python.linting.pylintCategorySeverity.convention": "Information",
-    "cmake.sourceDirectory": "${workspaceFolder}/code/cpp/replica360",
+    // "cmake.sourceDirectory": "${workspaceFolder}/code/cpp/replica360",
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "files.associations": {
         "charconv": "cpp"
     },
+    "cmake.configureOnOpen": false,
+    "python.analysis.extraPaths": [
+        "/mnt/sda1/workspace_windows/panoramic_optical_flow/code/python/"
+    ],
+    "python.analysis.completeFunctionParens": true,
 }
 
 // // windows env
