rename the python folder sturcture

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,23 +2,20 @@
     // python settting
     "python.languageServer": "Pylance",
     "python.analysis.extraPaths": [
-        "${workspaceFolder}/code/python",
-        "${workspaceFolder}/code/python/utility",
-        "${workspaceFolder}/code/python/test"
+        "${workspaceFolder}/code/python/src",
+        "D:/workenv_windows/python_3_7_panoramic_optical_flow/Lib",
+
     ],
     "python.analysis.completeFunctionParens": true,
-    // "python.pythonPath": "D:/workenv_windows/python_3_7_panoramic_optical_flow/Scripts/python.exe",
-    "python.pythonPath": "/mnt/sda1/workenv_linux_ubuntu_20_04/python3_8_360opticalflow/bin/python",
+    "python.pythonPath": "D:/workenv_windows/python_3_7_panoramic_optical_flow/Scripts/python.exe",
+    // "python.pythonPath": "/mnt/sda1/workenv_linux_ubuntu_20_04/python3_8_360opticalflow/bin/python",
     "python.terminal.activateEnvironment": true,
     "python.formatting.provider": "autopep8",
     "python.formatting.autopep8Args": [
         "--max-line-length=200"
     ],
-    "python.autoComplete.addBrackets": false,
     "python.autoComplete.extraPaths": [
-        "${workspaceFolder}/code/python",
-        "${workspaceFolder}/code/python/utility",
-        "${workspaceFolder}/code/python/test"
+        "${workspaceFolder}/code/python/src"
     ],
     "python.linting.enabled": true,
     "python.linting.pylintEnabled": true,
@@ -27,8 +24,8 @@
         "--rcfile",
         "${workspaceFolder}/.vscode/pylintrc"
     ],
-    // "python.linting.pylintPath": "D:/workenv_windows/python_3_7_panoramic_optical_flow/Scripts/pylint.exe",
-    "python.linting.pylintPath": "/mnt/sda1/workenv_linux_ubuntu_20_04/python3_8_360opticalflow/bin/pylint",
+    "python.linting.pylintPath": "D:/workenv_windows/python_3_7_panoramic_optical_flow/Scripts/pylint.exe",
+    // "python.linting.pylintPath": "/mnt/sda1/workenv_linux_ubuntu_20_04/python3_8_360opticalflow/bin/pylint",
     "python.linting.pylintCategorySeverity.convention": "Information",
     // cmake
     "cmake.configureOnOpen": false,
